refactor wolfbiomeconfig builder